--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             <li>Edad: 41 años</li>
             <li>Contacto: g.steenbecker@gmail.com, +56995796227</li>
         </ul>
+        <h2 class="estudios">Estudios</h2>
+        <ul>
+            <li>Educacion Básica y Media: Colegio Castle College, Viña del Mar</li>
+            <li>Educación Superior: Ingeniería en Sonido, Duoc Uc, Sede San Carlos de Apoquindo</li>
+        </ul>
 
     </section>
     
