--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         </ul>
 
     </section>
+
+    <footer>
+        <div class="box">g.steenbecker@gmail.com</div>
+    </footer>
     
 </body>
 </html>
