--- a/presentacion.html
+++ b/presentacion.html
@@ -25,3 +25,11 @@
       
     <header>
         <h1>Guillermo Steenbecker Caques</h1>
+        <img src="assets/img/IMG-20240317-WA0006.jpg" id="foto">
+    </header>
+
+        <footer>
+            <div class="box">g.steenbecker@gmail.com</div>
+        </footer>
+
+</body>
