--- a/trabajos.html
+++ b/trabajos.html
@@ -24,3 +24,8 @@
       </ul>
     <header>
         <h1>Guillermo Steenbecker Caques</h1>
+    </header>
+    <footer>
+        <div class="box">g.steenbecker@gmail.com</div>
+    </footer>
+</body>
