--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
         </ul>
         <h2 class="estudios">Estudios</h2>
         <ul>
-            <li>Educacion Básica y Media: Colegio Castle College, Viña del Mar</li>
-            <li>Educación Superior: Ingeniería en Sonido, Duoc Uc, Sede San Carlos de Apoquindo</li>
+            <li>Educacion Básica y Media: Colegio Castle College, Viña del Mar, 1989 - 2000</li>
+            <li>Educación Superior: Ingeniería en Sonido, Duoc Uc, Sede San Carlos de Apoquindo, 2002 - 2008</li>
+            <li>Bootcamp FullStack Javascript, Academia Desafio Latam, 2024</li>
         </ul>
 
     </section>
