--- a/trabajos.html
+++ b/trabajos.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="presentacion.html">Presentación</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="trabajos.html">Experiencia</a>
+            <a class="nav-link" href="trabajos.html">Portafolio</a>
           </li>
           <li class="nav-item">
             
@@ -51,6 +51,12 @@
               <li>2011 - 2013: SonoPraxis Ltda, Sonidista y encargado de mantenimientop de equipos computacionales de SonoPraxis Ltda, ubicada en VIña del Mar,que se desempeña en el ámbito de la producción de eventos, arriendo de equipamiento audiovisual, captura y pors producción de audio y video</li>
               <li>2016 - 2022: Estudio Elixir, dueño en Estudio ELixir, salas de ensayo y estudio de grabación, ubicados en Valparaíso desde 2016</li>
             </ul>
+          </div>
+          <div class="portafolio">
+            <img src="assets/img/duoc.png" alt="duoc" id="duoc">
+            <img src="assets/img/media.jpg" alt="elixir" id="elixir">
+            <img src="assets/img/bulnes+.png" alt="bulnes" id="bulnes">
+            <img src="assets/img/fic.jpeg" alt="fic" id="fic">
           </div>
         </section>
 
