--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a class="nav-link" href="presentacion.html">Presentación</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="trabajos.html">Experiencia</a>
+            <a class="nav-link" href="trabajos.html">Portafolio</a>
           </li>
           <li class="nav-item">
             
