--- a/presentacion.html
+++ b/presentacion.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="presentacion.html">Presentación</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="trabajos.html">Experiencia</a>
+            <a class="nav-link" href="trabajos.html">Portafolio</a>
           </li>
           <li class="nav-item">
             
