--- a/trabajos.html
+++ b/trabajos.html
@@ -54,7 +54,7 @@
           </div>
           <div class="portafolio">
             <img src="assets/img/duoc.png" alt="duoc" id="duoc">
-            <img src="assets/img/media.jpg" alt="elixir" id="elixir">
+            <img src="assets/img/elixir.jpg" alt="elixir" id="elixir"> 
             <img src="assets/img/bulnes+.png" alt="bulnes" id="bulnes">
             <img src="assets/img/fic.jpeg" alt="fic" id="fic">
           </div>
